--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 		</div>
 	</div>
 	<script src="/socket.io/socket.io.js"></script>
+	<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 	<script>
 	var canvas = document.getElementById('myCanvas');
 	var ctx = canvas.getContext("2d");
