--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 	socket.on('chat message', function(msg){
 		$('#messages').append($('<li>').text(msg));
 		var messages = document.getElementById("messages");
-		messages.scrollTop = myDiv.scrollHeight;
+		messages.scrollTop = messages.scrollHeight;
 	});
 	
 	socket.on('sendpoint', function(point){
